--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,7 @@
 ---
-import { SITE } from 'astrowind:config';
+import { Image } from 'astro:assets';
+import logo from '../assets/favicons/logo.png'
 ---
 
-<span
-  class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
->
-  🚀 {SITE?.name}
-</span>
+
+<Image src={logo} width="50" height="50" decoding="async" alt="knighthood"/> 
