--- a/src/components/ui/Headline.astro
+++ b/src/components/ui/Headline.astro
@@ -4,6 +4,7 @@ import { twMerge } from 'tailwind-merge';
 
 const {
   title = await Astro.slots.render('title'),
+  link = await Astro.slots.render('link'), // New link prop
   subtitle = await Astro.slots.render('subtitle'),
   tagline,
   classes = {},
@@ -23,10 +24,15 @@ const {
         <p class="text-base text-secondary dark:text-blue-200 font-bold tracking-wide uppercase" set:html={tagline} />
       )}
       {title && (
-        <h2
-          class={twMerge('font-bold leading-tighter tracking-tighter font-heading text-heading text-3xl', titleClass)}
-          set:html={title}
-        />
+        <h2 class={twMerge('font-bold leading-tighter tracking-tighter font-heading text-heading text-3xl', titleClass)}>
+          {link ? (
+            <a href={link} class="hover:underline">
+              {title}
+            </a>
+          ) : (
+            title
+          )}
+        </h2>
       )}
 
       {subtitle && <p class={twMerge('mt-4 text-muted', subtitleClass)} set:html={subtitle} />}
