--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -17,96 +17,176 @@ const metadata = {
 
   <HeroText
     tagline="Pricing"
-    title="Stellar Pricing for Every Journey"
-    subtitle="Choose the perfect plan that aligns with your cosmic goals."
+    title="Stellar Pricing for Every Business"
+    subtitle="Choose the perfect plan that aligns with your business needs."
   />
 
   <!-- Pricing Widget ******************* -->
 
   <Prices
-    title="Our prices"
+    title="Security Services Pricing"
     subtitle="Only pay for what you need"
     prices={[
       {
         title: 'basic',
-        subtitle: 'Optimal choice for personal use',
-        price: 29,
-        period: 'per month',
+        subtitle: 'Optimal choice for Small Business and MSME',
+        
         items: [
           {
-            description: 'Etiam in libero, et volutpat',
+            description: 'Quarterly Security personnel training',
           },
           {
-            description: 'Aenean ac nunc dolor tristique',
+            description: 'Site Audit every 15 days',
           },
           {
-            description: 'Cras scelerisque accumsan lib',
+            description: 'Personnel change within 7 days',
           },
           {
-            description: 'In hac habitasse',
+            description: '15 days credit period',
           },
+          
         ],
         callToAction: {
           target: '_blank',
           text: 'Get started',
-          href: '#',
+          href: '/contact',
         },
       },
       {
         title: 'standard',
-        subtitle: 'Optimal choice for small teams',
-        price: 69,
-        period: 'Per Month',
+        subtitle: 'Optimal choice for efficient security',
+       
         items: [
           {
-            description: 'Proin vel laoreet',
+            description: 'Security personnel training every 2 months',
           },
           {
-            description: 'Ut efficitur habitasse egestas',
+            description: 'Site audit every 10 days',
           },
           {
-            description: 'Volutpat hac curabitur',
+            description: 'Personnel change within 3 days',
           },
           {
-            description: 'Pellentesque blandit ut nibh',
+            description: 'Discounted Video analytics and central monitoring services',
           },
           {
-            description: 'Donec fringilla sem',
+            description: '30 days Credit Period',
+          },
+          {
+            description: 'Detailed Annual Security Audit Report',
           },
         ],
         callToAction: {
           target: '_blank',
           text: 'Get started',
-          href: '#',
+          href: '/contact',
         },
         hasRibbon: true,
         ribbonTitle: 'popular',
       },
       {
         title: 'premium',
-        subtitle: 'Optimal choice for companies',
-        price: 199,
-        period: 'Per Month',
+        subtitle: 'Optimal choice for Corporates with enhanced security needs',
+        
         items: [
           {
-            description: 'Curabitur suscipit risus',
+            description: 'Monthly Security Personnel as per requirement',
           },
           {
-            description: 'Aliquam habitasse malesuada',
+            description: 'Bi-Weekly Security Audits',
           },
           {
-            description: 'Suspendisse sit amet blandit',
+            description: 'Personne Change within 24 hours',
           },
           {
-            description: 'Suspendisse auctor blandit dui',
+            description: '45 days Credit Period',
+          },
+          {
+            description: 'Discounted Video analytics and central monitoring services',
+          },
+          {
+            description: 'Quarterly Security Audit Reports',
+          },
+          {
+            description: 'Emergency response services',
+          },
+          {
+            description: 'Quick Response team support',
           },
         ],
         callToAction: {
           target: '_blank',
           text: 'Get started',
-          href: '#',
+          href: '/contact',
         },
       },
+    ]}
+  />
+
+  <Prices
+    title="Staffing Services Pricing"
+    subtitle="Only pay for what you need"
+    prices={[
+      {
+        title: 'basic',
+        subtitle: 'Optimal choice for Small Business and MSME',
+
+        items: [
+          {
+            description: 'Basic Compliance Reports',
+          },
+          
+          {
+            description: 'Personnel change within 15 days',
+          },
+          {
+            description: 'Payment on reciept',
+          },
+          {
+            description: 'Online Payroll access to HR',
+          },
+          {
+            description: 'Basic Annual Wage and Compliance Audit Report',
+          },
+          
+        ],
+        callToAction: {
+          target: '_blank',
+          text: 'Get started',
+          href: '/contact',
+        },
+      },
+      {
+        title: 'standard',
+        subtitle: 'Optimal choice for efficient security',
+        price: 69,
+        period: 'Per Month',
+        items: [
+          {
+            description: 'Detailed Compliance Reports for all employees',
+          },
+          {
+            description: 'Personnel change within 7 days',
+          },
+          {
+            description: 'Online Payroll access to all Employees',
+          },
+          {
+            description: '15 days Credit Period',
+          },
+          {
+            description: 'Detailed Annual Wage and Compliance Audit Report',
+          },
+        ],
+        callToAction: {
+          target: '_blank',
+          text: 'Get started',
+          href: '/contact',
+        },
+        hasRibbon: true,
+        ribbonTitle: 'popular',
+      },
+      
     ]}
   />
 
@@ -132,11 +212,7 @@ const metadata = {
         description: 'Secure payment gateways to protect your financial information during transactions.',
         icon: 'tabler:shield-lock',
       },
-      {
-        title: 'Instant Access',
-        description: `Immediate access to your chosen plan's features and templates upon subscription.`,
-        icon: 'tabler:accessible',
-      },
+      
       {
         title: 'Upgrade Value',
         description: 'Upgrade to higher-tier plans to unlock more features and benefits for an enhanced experience.',
@@ -144,7 +220,7 @@ const metadata = {
       },
       {
         title: '24H support',
-        description: 'Questions answered via live chat, email or phone, every calendar day.',
+        description: 'Questions answered via WhatsApp, email or phone, every calendar day.',
         icon: 'tabler:headset',
       },
     ]}
@@ -167,15 +243,15 @@ const metadata = {
         icon: 'tabler:number-2',
       },
       {
-        title: 'Sign Up / Log In',
+        title: 'Schedule a Call',
         icon: 'tabler:number-3',
       },
       {
-        title: 'Review order',
+        title: 'Review our Service Proposal',
         icon: 'tabler:number-4',
       },
       {
-        title: 'Enter payment details',
+        title: 'Review our Pricing Proposal',
         icon: 'tabler:number-5',
       },
       {
@@ -183,7 +259,7 @@ const metadata = {
         icon: 'tabler:number-6',
       },
       {
-        title: 'Download and start using the template(s)',
+        title: 'Service Commencement',
         icon: 'tabler:number-7',
       },
     ]}
@@ -221,9 +297,9 @@ const metadata = {
           'We accept major credit cards and online payment methods to ensure a convenient and secure transaction process.',
       },
       {
-        title: 'Are there any hidden fees beyond the displayed cost?',
+        title: 'Are there any hidden fees beyond the finalised cost?',
         description:
-          'No, the subscription cost covers all the features and templates listed under each plan. There are no hidden fees or extra charges.',
+          'No, our prices cost includes wages, compliances and our service fee. GST is charged as per actuals under each plan. There are no hidden fees or extra charges.',
       },
     ]}
   />
@@ -231,13 +307,13 @@ const metadata = {
   <!-- CallToAction Widget *********** -->
 
   <CallToAction
-    title="Ready to boost your projects?"
-    subtitle="Join our community of satisfied customers who have transformed their work with our templates."
+    title="Ready to transform your Staffing?"
+    subtitle="Join our community of satisfied customers who have transformed their staffing needs with our services."
     actions={[
       {
         variant: 'primary',
-        text: 'Get started now',
-        href: '/',
+        text: 'Schedule a Call',
+        href: '/contact',
       },
     ]}
   />
