--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,9 +12,7 @@ const posts = (await getCollection('blog')).sort(
 <!doctype html>
 <html lang="en">
   <head>
-    <style>
-      /* Tailwind CSS should handle most of the styling */
-    </style>
+
   </head>
   <body>
     <Layout>
@@ -46,7 +44,7 @@ const posts = (await getCollection('blog')).sort(
                     <div class="prose-a:no-underline">
             {
               post.data.tags.map((tag) => (
-                <span class="mb-2 mr-2 inline-block rounded-full bg-neutral-200 px-3 py-1 text-sm hover:bg-neutral-500 dark:bg-neutral-600">
+                <span class="mb-2 mr-2 inline-block rounded-full  px-3 py-1 text-sm ">
                   {tag}
                 </span>
               ))
