--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -13,6 +13,8 @@ const { metadata } = Astro.props;
 ---
 
 <PageLayout metadata={metadata}>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <Fragment slot="announcement">
     <slot name="announcement" />
   </Fragment>
