--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -18,6 +18,8 @@ const metadata: MetaData = {
 ---
 
 <Layout metadata={metadata}>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <section class="px-4 py-16 sm:px-6 mx-auto lg:px-8 lg:py-20 max-w-6xl">
     <h1 class="font-bold font-heading text-4xl md:text-5xl leading-tighter tracking-tighter">{frontmatter.title}</h1>
     <div
