--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,8 @@ const { language, textDirection } = I18N;
 <!doctype html>
 <html lang={language} dir={textDirection} class="2xl:text-[20px]">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <CommonMeta />
     <Favicons />
     <CustomStyles />
