--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -16,6 +16,7 @@ const { metadata } = Astro.props;
 
 <Layout metadata={metadata}>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <slot name="header">
     <Header {...headerData} isSticky showRssFeed showToggleTheme />
