--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -5,7 +5,7 @@ import CallToAction from '~/components/widgets/CallToAction.astro';
 import type { MetaData } from '~/types';
 
 export interface Props {
-  frontmatter: {
+  frontmatter?: {
     title?: string;
   };
 }
@@ -21,7 +21,9 @@ const metadata: MetaData = {
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <section class="px-4 py-16 sm:px-6 mx-auto lg:px-8 lg:py-20 max-w-6xl">
-    <h1 class="font-bold font-heading text-4xl md:text-5xl leading-tighter tracking-tighter">{frontmatter.title}</h1>
+    <h1 class="font-bold font-heading text-4xl md:text-5xl leading-tighter tracking-tighter">
+      {frontmatter?.title}
+    </h1>
     <div
       class="mx-auto prose prose-lg max-w-4xl dark:prose-invert dark:prose-headings:text-slate-300 prose-md prose-headings:font-heading prose-headings:leading-tighter prose-headings:tracking-tighter prose-headings:font-bold prose-a:text-blue-600 dark:prose-a:text-blue-400 prose-img:rounded-md prose-img:shadow-lg mt-8"
     >
@@ -40,7 +42,6 @@ const metadata: MetaData = {
       },
     ]}
   >
-    
     <Fragment slot="subtitle">
       Connect with us to see how we can help you in your Security and Staffing needs for your Business.
     </Fragment>
