--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -23,7 +23,10 @@ const metadata =
   description: post.data.excerpt ,
   image: post.data.image ,
   openGraph: {
-    type: 'blog',
+    type: 'article',
+    image: post.data.image ,
+    title: post.data.title ,
+    description: post.data.excerpt ,
   },
 
 }
