--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,7 @@ const { language, textDirection } = I18N;
 <!doctype html>
 <html lang={language} dir={textDirection} class="2xl:text-[20px]">
   <head>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="3d447f70-3ce0-4312-bf27-4d4370ab82ad"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <CommonMeta />
