--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -280,7 +280,7 @@ testimonials={[
     name: 'Akash Trivedi',
     job: 'Zonal Head - North (Proconnect Logistics)',
     image: {
-      src: 'https://media.licdn.com/dms/image/C5103AQGKVXh5mxuLSw/profile-displayphoto-shrink_800_800/0/1519803501743?e=1722470400&v=beta&t=PZov-11bH337ggOD-gVP1RFXqf6-dWx-eHocTnONGg0',
+      src: 'https://i.imgur.com/ffTQQ7L.png',
       alt: 'Akash Trivedi Image',
     },
   },
@@ -289,7 +289,7 @@ testimonials={[
     name: 'Rajesh Singh',
     job: 'Operations Head (SpiceXpress)',
     image: {
-      src: 'https://media.licdn.com/dms/image/D4D03AQElZ7-h2vyicw/profile-displayphoto-shrink_400_400/0/1673163903505?e=1722470400&v=beta&t=LEmXSAP6LOZJhE67PIqXyIi8EBDAFNdy-6lhiC8oj_I',
+      src: 'https://i.imgur.com/EuQTAqp.png',
       alt: 'Rajesh Singh Image',
     },
   },
@@ -298,7 +298,7 @@ testimonials={[
     name: 'Ajay Kanwar',
     job: 'COO (Holisol Logistics)',
     image: {
-      src: 'https://media.licdn.com/dms/image/C4D03AQHOr7FJmkKV1A/profile-displayphoto-shrink_400_400/0/1622820246459?e=1722470400&v=beta&t=9amhNF1RkZDSrjU4R-NnblLVR75DDmoKN4-upE7StGs',
+      src: 'https://i.imgur.com/0czCpFs.png',
       alt: 'Ajay Kanwar Image',
     },
   },
