--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -18,7 +18,11 @@ const { metadata } = Astro.props;
     <Header {...headerData} isSticky showRssFeed showToggleTheme />
   </slot>
   <main>
-    <slot />
+    <div
+    class="mx-auto prose-stone prose-lg max-w-4xl dark:prose-invert  text-black dark:text-white prose-md prose-headings:font-heading prose-headings:leading-tighter prose-headings:tracking-tighter prose-headings:font-bold prose-a:text-blue-600 dark:prose-a:text-blue-400 prose-img:rounded-md prose-img:shadow-lg mt-8">
+
+      <slot />
+    </div>
   </main>
   <slot name="footer">
     <Footer {...footerData} />
