--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,6 @@
 import Layout from '~/layouts/PageLayout.astro';
 import HeroText from '~/components/widgets/HeroText.astro';
 import Features2 from '~/components/widgets/Features2.astro';
-import Grid from '@mui/material/Grid';
 
 const metadata = {
   title: 'Contact',
@@ -16,7 +15,7 @@ const metadata = {
 
   <script async src="https://tally.so/widgets/embed.js"></script>
   
-    <iframe data-tally-src="https://tally.so/r/nP6exx?transparentBackground=1" width="100%" height="500" ></iframe>
+    <iframe src="https://tally.so/r/nP6exx?transparentBackground=1" width="100%" height="800" ></iframe>
 
 
   <!-- Features2 Widget ************** -->
