--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -7,14 +7,20 @@ import type { MetaData } from '~/types';
 export interface Props {
   frontmatter?: {
     title?: string;
+    description?: string;
+    image?: string;
+    imageAlt?: string; // Added imageAlt to frontmatter
   };
 }
 
 const { frontmatter } = Astro.props;
 
+
 const metadata: MetaData = {
   title: frontmatter?.title,
+  description: frontmatter?.description,
 };
+
 ---
 
 <Layout metadata={metadata}>
@@ -25,8 +31,8 @@ const metadata: MetaData = {
       {frontmatter?.title}
     </h1>
     <div
-    class="mx-auto prose-stone prose-lg max-w-4xl dark:prose-invert  text-black dark:text-white prose-md prose-headings:font-heading prose-headings:leading-tighter prose-headings:tracking-tighter prose-headings:font-bold prose-a:text-blue-600 dark:prose-a:text-blue-400 prose-img:rounded-md prose-img:shadow-lg mt-8">
-
+      class="mx-auto prose-stone prose-lg max-w-4xl dark:prose-invert  text-black dark:text-white prose-md prose-headings:font-heading prose-headings:leading-tighter prose-headings:tracking-tighter prose-headings:font-bold prose-a:text-blue-600 dark:prose-a:text-blue-400 prose-img:rounded-md prose-img:shadow-lg mt-8"
+    >
       <slot />
     </div>
   </section>
