--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import Layout from '~/layouts/PageLayout.astro';
+import Layout from '~/layouts/BlogLayout.astro';
  
 
 import { Image } from "astro:assets";
